ingress/ingress-argo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-argo
  namespace: ns-argo
spec:
  rules:
  - host: argo.jamesbuckett.com
    http:
      paths:
      - defaultBackend:
          service.name: argo-server
          service.port.number: 2746
