ingress/ingress-chaos.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-chaos-mesh
  namespace: ns-chaos-mesh
spec:
  rules:
  - http:
      paths:
      - path: /chaos
        backend:
          serviceName: chaos-dashboard
          servicePort: 2333
