ingress/ingress-istio.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-istio
  namespace: ns-istio
spec:
  rules:
  - host: istio.jamesbuckett.com
    http:
      paths:
      - backend:
          serviceName: productpage
          servicePort: 9080
