ingress/ingress-loki.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-loki
  namespace: ns-loki
spec:
  rules:
  - host: loki.jamesbuckett.com
    http:
      paths:
      - defaultBackend:
          service.name: loki-release-grafana
          service.port.number: 80
