ingress/ingress-loki.yml-no-https.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-loki
  namespace: ns-loki
spec:
  rules:
    - host: loki.jamesbuckett.com
      http:
        paths:
          - backend:
              serviceName: loki-release-grafana
              servicePort: 80
