ingress/ingress-vpa.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ing-vpa
  namespace: ns-goldilocks
spec:
  rules:
  - host: vpa.jamesbuckett.com
    http:
      paths:
      - backend:
          serviceName: goldilocks-release-dashboard
          servicePort: 80
